--- a/ait-news/views/index.hbs
+++ b/ait-news/views/index.hbs
@@ -1,3 +1,4 @@
+<h1>480 News</h1>
 <ol>
 {{#each links as |link|}}
   <li><h3><a href="http://{{link.url}}">{{link.title}}</a>, <a href="/home/{{link.slug}}">[Comments]</a></h3>
