--- a/ait-news/views/layout.hbs
+++ b/ait-news/views/layout.hbs
@@ -3,11 +3,12 @@
 		<head>
 				<meta charset="utf-8">
 				<meta name="viewport" content="width=device-width">
-        <!-- <link rel="stylesheet" type="text/css" href="/base.css"> -->
+        <link rel="stylesheet" type="text/css" href="/base.css">
 				<title></title>
 		</head>
 		<body>
-      <h1>480 News</h1>
+			<div id="wrapper">
 				{{{body}}}
+			</div>
 		</body>
 </html>
